# VSF_TTS_Harness

./: .gitignore  Pattern.spec  README.md  build_exe.py  e2e.py  main.py  pyproject.toml
data/: _diag_prompt.txt  _diag_raw_stdout.txt  _diag_stripped.txt  _extract_tmp.py
data/judge_2026-06-15/: _raw_consolidate_read-and-summarize-file.txt  _raw_consolidate_test-and-report-ci-to-teams.txt  _raw_consolidate_write-short-prd.txt  _raw_debate_attach-to-running-desktop-app.txt  _raw_debate_read-and-summarize-file.txt  _raw_debate_test-and-report-ci-to-teams.txt  _raw_debate_write-short-prd.txt  _raw_triage.txt  candidate_skills.json  cluster_summary.json  pattern_report.md
data/sessions_2026-06-12_runAt_20260612-173005/: _index.json  lucid-beautiful-fermat__9de10fe5-9cd.jsonl
data/sessions_2026-06-15_runAt_20260615-173114/: _index.json  adoring-loving-dirac__9590c9ea-019.jsonl  blissful-peaceful-feynman__69da99fc-648.jsonl  busy-hopeful-knuth__902a32c7-7c3.jsonl  (+7 more)
docs/: pipeline-visualization.html
gui/: app.py  pipeline_runner.py  pyproject.toml  screen_configure.py  screen_review.py  screen_running.py  theme.py
scripts/: judge.py  scan.py  synth.py
tests/: conftest.py  test_accept_template.py  test_aggregator.py  test_candidate_schema.py  test_claude_runner.py  test_debate.py  test_judge_prompts.py  test_pipeline_runner.py  test_render_proposal.py  test_running_screen.py  test_scan_claude_code.py  test_scan_context.py  test_scan_feedback.py  test_scan_sequence.py  test_skill_assemble.py  test_skill_render.py  test_skill_validate.py  test_trace_loader.py
(+44 files in other folders)
