[project]
name = "pattern"
version = "0.1.0"
description = "Behavior → Skill harness for Claude Cowork"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
    "click>=8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
